[gd_scene load_steps=5 format=3 uid="uid://deye2a812qqpf"]

[ext_resource type="Script" path="res://gameplay/npcs/npc.gd" id="1_td8i1"]
[ext_resource type="Texture2D" uid="uid://c8y4c3r6cjeun" path="res://assets/characters/baker.png" id="2_2xmkt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_06mo5"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_yphx6"]
radius = 16.0

[node name="Npc" type="CharacterBody2D"]
script = ExtResource("1_td8i1")

[node name="DebugLabel" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -12.0
offset_top = -30.0
offset_right = 12.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 8
horizontal_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_06mo5")

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("CircleShape2D_yphx6")

[node name="Sprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -16)
texture = ExtResource("2_2xmkt")
hframes = 3
vframes = 4
frame = 7

[node name="AnimationTimer" type="Timer" parent="Sprite"]
unique_name_in_owner = true

[connection signal="body_entered" from="InteractionArea" to="." method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_interaction_area_body_exited"]
[connection signal="timeout" from="Sprite/AnimationTimer" to="." method="_on_animation_timer_timeout"]
